--- a/shop-ease/package.json
+++ b/shop-ease/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "server": "json-server --watch db.json --port 5000"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -19,10 +18,6 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "bootstrap": "^4.6.2",
-    "json-server": "^1.0.0-beta.3",
-    "primeicons": "^7.0.0",
-    "primeng": "^19.0.10",
     "rxjs": "~7.8.0",
     "shop-ease": "file:",
     "tslib": "^2.3.0",
