--- a/shop-ease/package.json
+++ b/shop-ease/package.json
@@ -6,18 +6,26 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev": "nodemon server.js",
+    "server": "json-server --watch db.json --port 5000"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.14",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.14",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "bcryptjs": "^2.4.3",
+    "json-server": "^0.17.4",
+    "jsonwebtoken": "^9.0.2",
     "rxjs": "~7.8.0",
     "shop-ease": "file:",
     "tslib": "^2.3.0",
@@ -34,6 +42,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "nodemon": "^3.0.2",
     "typescript": "~5.1.3"
   }
 }
