--- a/shop-ease/angular.json
+++ b/shop-ease/angular.json
@@ -7,13 +7,12 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-            "style": "scss",
-            "skipTests": true
+          "style": "scss"
         }
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "shopease",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -28,18 +27,13 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-                "src/assets",
-                "src/manifest.webmanifest"
+              "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-              "scripts": [],
-              "stylePreprocessorOptions": {
-                "includePaths": ["src/styles"]
-              }
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -55,26 +49,7 @@
                   "maximumError": "4kb"
                 }
               ],
-                "fileReplacements": [
-                  {
-                    "replace": "src/environments/environment.ts",
-                    "with": "src/environments/environment.prod.ts"
-                  }
-                ],
-                "outputHashing": "all",
-                "optimization": {
-                  "scripts": true,
-                  "styles": {
-                    "minify": true,
-                    "inlineCritical": false
-                  },
-                  "fonts": true
-                },
-                "sourceMap": false,
-                "namedChunks": false,
-                "extractLicenses": true,
-                "vendorChunk": false,
-                "buildOptimizer": true
+              "outputHashing": "all"
             },
             "development": {
               "buildOptimizer": false,
@@ -89,18 +64,12 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-            "options": {
-              "proxyConfig": "src/proxy.conf.json"
-            },
           "configurations": {
             "production": {
               "browserTarget": "shop-ease:build:production"
             },
             "development": {
-                "browserTarget": "shop-ease:build:development",
-                "port": 4200,
-                "open": true,
-                "liveReload": true
+              "browserTarget": "shop-ease:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -125,7 +94,6 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
